# langchain

templates/nvidia-guardrails-with-rag/: README.md  ingest.py  pyproject.toml
templates/nvidia-guardrails-with-rag/nvidia_guardrails_with_rag/: __init__.py  chain.py
templates/nvidia-guardrails-with-rag/nvidia_guardrails_with_rag/guardrails/config/: disallowed.co  general.co  prompts.yml
